# bittrace_api_v3_source

./: .gitignore  CHANGELOG.md  DEPLOYMENT_BOUNDARY.md  KNOWN_ISSUES.md  LICENSE.md  NOTICE_PATENT_PENDING.md  README.md  SUPPORTED_SCOPE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/pr_bodies/: stabilization_tests_ci_release_hygiene.md
.github/releases/: 0.3.1.md
.github/workflows/: ci.yml
configs/: canonical_deployment_candidate.yaml  canonical_source_profile.yaml  legacy_paderborn_reference_deployment_candidate.yaml  legacy_paderborn_reference_source_profile.yaml  persistence_aggressive.yaml  persistence_quiet_scout.yaml
configs/experimental/: backend_architecture_comparison.yaml  frontend_capacity_check.yaml  leandeep_max_search.yaml  leanlean_ceiling_search.yaml  leanlean_max_search.yaml  leanlean_max_search_deep.yaml  leanlean_seed_sweep.yaml
configs/experimental/source_profiles/: frontend_capacity_temporal.yaml
docs/: AI_ASSISTANT_GUIDE.md  EXPERIMENTAL_WORKFLOWS.md  HANDBOOK.md  QUICKSTART.md  README_DOC_MAP.md  RELEASE_WORKFLOW.md  REPO_HYGIENE_REPORT.md  USER_GUIDE.md  VERIFICATION_WORKFLOW.md
docs/releases/: 0.3.1.md  RELEASE_CHECKLIST.md
logs/: PROJECT_LOG.md
scripts/: run_ci_smoke.py  run_release_smoke.py
src/bittrace/: __init__.py  __main__.py
src/bittrace/cli/: __init__.py  main.py
src/bittrace/core/: __init__.py  config.py
src/bittrace/experimental/: __init__.py  backend_architecture_comparison.py  cli.py  frontend_capacity_check.py  leandeep_max_search.py  leanlean_ceiling_search.py  leanlean_max_search.py  leanlean_seed_sweep.py
src/bittrace/source/: __init__.py  _leanlean_support.py  cli.py  full_binary_campaign.py  full_binary_hardmode.py  leanlean_deployment_candidate.py  leanlean_persistence_tuning.py  locked_frontend.py
src/bittrace/v3/: __init__.py  artifacts.py  cli.py  contracts.py  dataset_inputs.py  deep_materialization.py  deep_stage.py  freeze_export.py  frontend_encoding.py  frontend_materialization.py  frontend_stage.py  frozen_runtime.py  golden_reference.py  pipeline.py  verify.py
src/bittrace_api_v3_source.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bittrace_bearings_v3_source/: __init__.py  __main__.py  _leanlean_support.py  cli.py  full_binary_campaign.py  full_binary_verification.py  leanlean_deployment_candidate.py  leanlean_persistence_tuning.py  temporal_features.py
tests/: conftest.py  test_ci_smoke.py  test_cli_surface.py  test_config_contracts.py  test_import_smoke.py
(+15 files in other folders)
