[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bittrace-api-v3-source"
version = "0.3.0"
description = "Frozen BitTrace V3 source/commercial lane for temporal_threshold_36 + Lean-Lean."
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "PyYAML>=6.0",
  "scipy>=1.13",
]

[project.optional-dependencies]
gpu = ["torch>=2.10"]

[project.scripts]
bittrace-source = "bittrace_bearings_v3_source.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bittrace*", "bittrace_bearings_v3_source*"]
