[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bittrace-api-v3-source"
version = "0.3.0"
description = "Canonical BitTrace API with one supported lane and one experimental lane under the `bittrace` package."
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "PyYAML>=6.0",
  "scipy>=1.13",
]

[project.optional-dependencies]
gpu = ["torch>=2.10"]

[project.scripts]
bittrace = "bittrace.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["bittrace*"]
